force-app/main/default/objects/Case/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <label>Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Device Issue</fullName>
            </value>
            <value>
                <fullName>Error Message</fullName>
            </value>
            <value>
                <fullName>Low Space</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>3rd Party License</fullName>
            </value>
            <value>
                <fullName>Performance</fullName>
            </value>
            <value>
                <fullName>Rx License</fullName>
            </value>
            <value>
                <fullName>SQL</fullName>
            </value>
            <value>
                <fullName>Session Reset</fullName>
            </value>
            <value>
                <fullName>Accounts</fullName>
            </value>
            <value>
                <fullName>Backups</fullName>
            </value>
            <value>
                <fullName>Background Tasks</fullName>
            </value>
            <value>
                <fullName>Bundles</fullName>
            </value>
            <value>
                <fullName>Clipboards</fullName>
            </value>
            <value>
                <fullName>Care Plans</fullName>
            </value>
            <value>
                <fullName>Client Screen</fullName>
            </value>
            <value>
                <fullName>Document Integration</fullName>
            </value>
            <value>
                <fullName>Documents</fullName>
            </value>
            <value>
                <fullName>Data Wizards</fullName>
            </value>
            <value>
                <fullName>Emails</fullName>
            </value>
            <value>
                <fullName>Fees</fullName>
            </value>
            <value>
                <fullName>Financials</fullName>
            </value>
            <value>
                <fullName>Insurance</fullName>
            </value>
            <value>
                <fullName>Inventory</fullName>
            </value>
            <value>
                <fullName>Options and Setup</fullName>
            </value>
            <value>
                <fullName>Patient Screen</fullName>
            </value>
            <value>
                <fullName>Procedures</fullName>
            </value>
            <value>
                <fullName>Page Styles and Printing</fullName>
            </value>
            <value>
                <fullName>Reminders</fullName>
            </value>
            <value>
                <fullName>Reports</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>