force-app/main/default/objects/Case/fields/Sub_Reason__c.field-meta.xml
<CustomField>
    <fullName>Sub_Reason__c</fullName>
    <label>Sub Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Animal Records</fullName>
            </value>
            <value>
                <fullName>Clinical Records</fullName>
            </value>
            <value>
                <fullName>Wellness Plans</fullName>
            </value>
            <value>
                <fullName>Client Details</fullName>
            </value>
            <value>
                <fullName>Client Groups</fullName>
            </value>
            <value>
                <fullName>Client Setup</fullName>
            </value>
            <value>
                <fullName>Client Transactions</fullName>
            </value>
            <value>
                <fullName>Automation Service</fullName>
            </value>
            <value>
                <fullName>Backups</fullName>
            </value>
            <value>
                <fullName>Connectivity</fullName>
            </value>
            <value>
                <fullName>Database/SQL Issues</fullName>
            </value>
            <value>
                <fullName>External Images</fullName>
            </value>
            <value>
                <fullName>Label Printing</fullName>
            </value>
            <value>
                <fullName>Printing</fullName>
            </value>
            <value>
                <fullName>System Setup</fullName>
            </value>
            <value>
                <fullName>User Acess</fullName>
            </value>
            <value>
                <fullName>Workstation Setup</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Mail Merge</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Reminders</fullName>
            </value>
            <value>
                <fullName>SMS</fullName>
            </value>
            <value>
                <fullName>Adhocs</fullName>
            </value>
            <value>
                <fullName>Standard Reports</fullName>
            </value>
            <value>
                <fullName>VPM Reports</fullName>
            </value>
            <value>
                <fullName>Batch &amp; Expiry</fullName>
            </value>
            <value>
                <fullName>Loyalty Scheme</fullName>
            </value>
            <value>
                <fullName>RVM</fullName>
            </value>
            <value>
                <fullName>Stock Analysis Groups</fullName>
            </value>
            <value>
                <fullName>Stock Details</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>