force-app/main/default/objects/Case/listViews/Case_Chat_Case.listView-meta.xml
<ListView>
    <fullName>Case_Chat_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Case Chat</label>
    <queue>Case_Chat</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>