force-app/main/default/objects/Case/listViews/CFS_Users_Case.listView-meta.xml
<ListView>
    <fullName>CFS_Users_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>CFS Users</label>
    <queue>CFS_Users</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>